--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-rating": "^2.0.5",
