--- a/package.json
+++ b/package.json
@@ -7,28 +7,29 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "chart.js": "^2.9.3",
-    "jquery": "^3.5.1",
-    "react-bootstrap": "^1.2.2",
-    "react-chartjs-2": "^2.9.0",
-    "react-countup": "^4.3.3",
-    "react-fontawesome": "^1.7.1",
-    "react-rating": "^2.0.5",
-    "react-rating-stars-component": "^2.2.0",
-    "react-tooltip": "^4.2.7",
-    "semantic-ui-react": "^0.88.2",
     "@material-ui/core": "^4.9.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.4.3",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
+    "jquery": "^3.5.1",
     "leaflet": "^1.6.0",
     "papaparse": "^5.1.1",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.2.2",
+    "react-chartjs-2": "^2.9.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
+    "react-fontawesome": "^1.7.1",
     "react-leaflet": "^2.6.1",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-scripts": "3.4.0",
-    "react-simple-maps": "^1.0.0-beta.0"
+    "react-simple-maps": "^1.0.0-beta.0",
+    "react-tooltip": "^4.2.7",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
